Replace logo text with image in header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <header>
     <nav>
-        <div class="logo">ElsaTech</div>
+        <div class="<img src="logo.png" alt="My Logo" width="150">
+">ElsaTech</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
