--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <header>
     <nav>
-        <div class="<img src="logo.png" alt="My Logo" width="150">
-">ElsaTech</div>
+        <div class="logo">ElsaTech</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
