--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <title>My Website</title>
+</head>
+<body>
+    <img src="logo.png" alt="My Logo" width="150">
+    <h1>Welcome to My Website</h1>
+    <p>This is my first GitHub Pages website!</p>
+</body>
+</html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
