Add logo image to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<img src="assets/images/logo.png" alt="Company Logo" style="height:80px;">
 <header>
     <nav>
         <div class="logo">ElsaTech</div>
