Add logo image to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="assets/images/logo.png" alt="ElsaTech Logo" style="height:80px;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElsaTech — Innovative IT Solutions</title>
