Refactor index.html for improved layout and content
Updated the HTML structure and styles for better readability and consistency.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <img src="assets/images/logo.png" alt="ElsaTech Logo" style="height:80px;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElsaTech — Innovative IT Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<img src="assets/images/logo.png" alt="Company Logo" style="height:80px;">
+
+<body style="background:white; color:black;">
+
 <header>
     <nav>
-        <div class="logo">ElsaTech</div>
+        <div class="logo">
+            <img src="assets/images/logo.png" alt="ElsaTech Logo" style="height:60px;">
+        </div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -22,7 +24,7 @@
     </nav>
 </header>
 
-<section id="home" class="hero">
+<section id="home" class="hero" style="background:white; color:black;">
     <h1>Innovative IT Solutions for a Digital Future</h1>
     <p>We help businesses grow with modern software, cloud, and technology services.</p>
     <a href="#services" class="btn">Our Services</a>
@@ -32,8 +34,7 @@
     <h2>About ElsaTech</h2>
     <p>
         ElsaTech is a modern IT solutions provider specializing in software development,
-        cloud deployment, cybersecurity, and digital transformation. Our mission is to help
-        companies innovate and stay ahead with cutting-edge technologies.
+        cloud deployment, cybersecurity, and digital transformation.
     </p>
 </section>
 
@@ -42,26 +43,25 @@
     <div class="services-container">
         <div class="service-card">
             <h3>Software Development</h3>
-            <p>Custom web, mobile, and desktop applications built with modern technologies.</p>
+            <p>Custom web, mobile, and desktop applications.</p>
         </div>
         <div class="service-card">
             <h3>Cloud Solutions</h3>
-            <p>AWS, Azure & Google Cloud deployment, migration, and optimization.</p>
+            <p>AWS, Azure & Google Cloud deployment.</p>
         </div>
         <div class="service-card">
             <h3>Cybersecurity</h3>
-            <p>Protect your business with advanced security audits and monitoring.</p>
+            <p>Security audits and monitoring.</p>
         </div>
         <div class="service-card">
             <h3>IT Consulting</h3>
-            <p>Professional guidance to modernize and scale your technology stack.</p>
+            <p>Scale your technology stack.</p>
         </div>
     </div>
 </section>
 
 <section id="portfolio" class="section">
     <h2>Our Projects</h2>
-    <p>Here are some of the solutions we delivered for our clients.</p>
     <div class="portfolio-grid">
         <div class="portfolio-item">AI Analytics Dashboard</div>
         <div class="portfolio-item">E-Commerce Platform</div>
@@ -80,7 +80,7 @@
     </form>
 </section>
 
-<footer>
+<footer style="background:white; color:black;">
     <p>© 2025 ElsaTech — All Rights Reserved</p>
 </footer>
 
